# cga_cfa

./: CMakeLists.txt  README.md  package.xml
config/: agents_locations.csv  desired_goals.csv
launch/: goal_assignment.launch
scripts/: agents_locations.csv  desired_goals.csv
src/: agents_locations.csv  altitude_assignment.py  assign_goals.py  ccda.py  cga_cfa.py  cga_cfa_alt.py  cga_cfa_functions.py  cga_cfa_ros.py  goal_assignment.py
to_delete/: collision_avoidance.py
